[package]
name = "ld54gamelib"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "main"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[features]
dev = [
    "bevy/bevy_dylib",
]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"
bevy_kira_audio = { version = "0.17" }
bevy_asset_loader = { version = "0.17" }
bevy_mod_picking = "0.15.0"
bevy_rand = "0.3.0"
bevy_prng = { version = "0.1", features = ["rand_chacha"] }
rand = "0.8.4"
twox-hash = "1.6.1"
serde = "1.0"
serde_yaml = "0.9.19"
mimalloc = { version = "*", default-features = false }
strum = "0.25.0"
strum_macros = "0.25.2"
num-traits = "0.2"
num-derive = "0.4"
itertools = "0.11.0"
once_cell = "1.8.0"
rand_distr = "0.4.3"
rand_core = "0.6.4"
log = "0.4.14"
flexi_logger = "0.27.0"
