[package]
name = "ld54gamelib"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "main"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

[features]
dev = [
    "bevy/bevy_dylib",
]

[dependencies]
bevy = { version = "0.11", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
    "webgl2"
] }
bevy_egui = "0.21.0"
bevy-inspector-egui = "0.19.0"
bevy_kira_audio = { version = "0.17" }
bevy_asset_loader = { version = "0.17" }
bevy_rand = "0.3.0"
bevy_prng = { version = "0.1", features = ["rand_xoshiro"] }
rand = "0.8.4"
serde = "1.0"
serde_yaml = "0.9.19"
rand_distr = "0.4.3"
rand_core = "0.6.4"
log = "0.4.14"
flexi_logger = "0.27.0"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]